--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,3 @@
 # Welcome 
 
-Blog about programming and teching it effectively.
+These are my experiments in teaching front-end programming concepts to beginners.
